[project]
name = "llm-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ajac-zero", email = "ajcardoza2000@gmail.com" }]
requires-python = ">=3.9,<3.14"
dependencies = [
    "gitingest>=0.1.2",
    "gitpython>=3.1.44",
    "llm>=0.19.1",
]

[project.entry-points.llm]
dev = "llm_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
