[project]
name = "llm-edits"
version = "0.1.0"
description = "Use LLMs to generate and edit files in your shell"
readme = "README.md"
authors = [{ name = "panuhorsmalahti", email = "panu.horsmalahti@iki.fi" }]
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
requires-python = ">=3.9,<3.14"
dependencies = ["llm"]

[dependency-groups]
dev = ["pytest>=8.3.4"]

[project.entry-points.llm]
dev = "llm_edits"

[project.urls]
Homepage = "https://github.com/panu-horsmalahti/llm-edits"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
